2013-09-26  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* index.php: Deleted some unused code.
	
	* godmode/setup/setup_crm.php: Now the invoice logo are picked
	from the directory "images/custom_logos".
	
	* include/integria_cron.php: Modified the function
	"run_mail_queue" to send a mail to more than one email directions.
	
	* operation/companies/company_detail.php: Fixed an ACL error.
	
	* operation/invoices/invoice_template.php,
	  operation/invoices/invoice_view.php: Added the header logo to
	  the pdf invoices.
	
	* operation/invoices/invoices.php: Now the users only can only
	assign to the invoices the companies that they manage.
	
	* operation/users/user_edit.php: Added a tip on email input.
	
2013-09-26  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_graph.php: Now OK appears in green color and
	FAIL appears in red in the function
	"graph_incident_statistics_sla_compliance".
	
	* include/functions_incidents.php: Now the priorities in the
	incidents by priority table are showed by its name.
	
	* operation/companies/company_detail.php: Now the user appears
	by default as company manager in the new company form. Now the
	page does not go to the company list when update or create a
	company.
	  
2013-09-26  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/user_report/holidays_calendar.php,
	  operation/agenda/agenda.php: Deleted a pair of debug traces.
	
2013-09-26  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_calendar.php: Added the function
	"calendar_get_non_working_days".
	
	* include/ajax/calendar.php: Added code to get the non working
	days via ajax.
	
	* operation/user_report/holidays_calendar.php,
	  operation/agenda/agenda.php: Now the non working days of this
	  calendars are highlighted.
	
2013-09-25  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* godmode/setup/setup_visual.php: Now the site logos are picked
	from "images/custom_logos".
	